doc/2.8/_sources/reference/generated/ak.merge_option_of_records.rst.txt
ak.merge_option_of_records
--------------------------

.. py:module: ak.merge_option_of_records

Defined in `awkward.operations.ak_merge_option_of_records <https://github.com/scikit-hep/awkward/blob/0b5ee6e87d2a6d475c58ee0b3ff2106b415311fd/src/awkward/operations/ak_merge_option_of_records.py>`__ on `line 22 <https://github.com/scikit-hep/awkward/blob/0b5ee6e87d2a6d475c58ee0b3ff2106b415311fd/src/awkward/operations/ak_merge_option_of_records.py#L22>`__.

.. py:function:: ak.merge_option_of_records(array, axis=-1, *, highlevel=True, behavior=None, attrs=None)


    :param array: Array-like data (anything :py:obj:`ak.to_layout` recognizes).
    :param axis: The dimension at which this operation is applied.
             The outermost dimension is ``0``, followed by ``1``, etc., and negative
             values count backward from the  innermost: ``-1`` is the innermost
             dimension, ``-2`` is the next level up, etc.
             If a str, it is interpreted as the name of the axis which maps
             to an int if named axes are present. Named axes are attached
             to an array using :py:obj:`ak.with_named_axis` and removed with
             :py:obj:`ak.without_named_axis`; also see the
             `Named axes user guide <../../user-guide/how-to-array-properties-named-axis.html>`__.
    :type axis: int or str
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict
    :param attrs: Custom attributes for the output array, if
              high-level.
    :type attrs: None or dict

Simplifies options of records, e.g.

.. code-block:: python


    >>> array = ak.Array([None, {"a": 1}, {"a": 2}])

into records of options, i.e.

.. code-block:: python


    >>> ak.merge_option_of_records(array)
    <Array [{a: None}, {a: 1}, {a: 2}] type='3 * {a: ?int64}'>

